--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -2,7 +2,7 @@
 * {
   box-sizing: border-box;
   font-family: 'Verdana', sans-serif;
-  background-color: var(--light-color);
+  /* background-color: var(--light-color); */
 }
 
 html, body {
@@ -11,6 +11,7 @@ html, body {
   width: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  background-color: var(--light-color);
 }
 
 :root {
