--- a/mi-aplicacion/src/components/Footer/Footer.css
+++ b/mi-aplicacion/src/components/Footer/Footer.css
@@ -28,6 +28,8 @@
     text-decoration: none;
     font-size: 1.2rem;
     transition: opacity 0.3s;
+    /* font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 300; */
   }
   
   .nav-menu-footer a:hover {
@@ -44,25 +46,6 @@
     margin: 2rem 0 0;
   }
   
-  /* Segunda fila - Teléfonos y dirección */
-  /* .segunda-fila-footer {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    margin-bottom: 2rem;
-    width: 100%;
-  }
-  
-  .columna-izquierda, .columna-derecha {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  
-  .columna-izquierda p, .columna-derecha p {
-    margin: 0;
-    font-size: 1rem;
-  } */
 
 /* Segunda fila - Teléfonos y dirección */
 .segunda-fila-footer {
@@ -76,7 +59,6 @@
     margin-bottom: 3.5rem;
   }
   
-  /* Separador vertical en el centro */
   .segunda-fila-footer::after {
     content: "";
     position: absolute;
@@ -93,8 +75,8 @@
     flex-direction: column;
     gap: 0.5rem;
     padding: 0 2rem;
-    width: 40%; /* Asegura que ambas columnas tengan el mismo ancho */
-    max-width: 300px; /* Limita el ancho máximo para pantallas grandes */
+    width: 40%; 
+    max-width: 300px; 
   }
   
   .columna-izquierda {
@@ -114,7 +96,6 @@
     font-size: 0.8rem;
   }
 
-  /* Separador horizontal después de la segunda fila */
 .segunda-fila-footer::before {
     content: "";
     margin-bottom: -3rem;
@@ -126,16 +107,6 @@
     height: 1px;
     background-color: rgba(255, 255, 255, 0.2);
   }
-  
-  /* Separador horizontal */
-  /* .segunda-fila-footer::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-    margin: 2rem 0 0;
-  } */
 
 
   
@@ -150,7 +121,6 @@
     font-size: 0.8rem;
   }
   
-  /* Separador horizontal */
   .tercera-fila-footer::after {
     content: "";
     display: block;
@@ -160,38 +130,7 @@
     margin: 2rem 0 0;
   }
   
-  /* Cuarta fila - Horarios */
-  /* .cuarta-fila-footer {
-    margin: 0rem 0;
-    width: 100%;
-  }
-  
-  .cuarta-fila-footer h5 {
-    margin: 0 0 1rem;
-    font-size: 0.8rem;
-    font-weight: normal;
-  }
-  
-  .horarios {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  
-  .horarios p {
-    margin: 0;
-    font-size: 0.8rem;
-  } */
-  
-  /* Separador horizontal */
-  /* .cuarta-fila-footer::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-    margin: 2rem 0 0;
-  } */
+
 
   /* Cuarta fila - Horarios */
 .cuarta-fila-footer {
@@ -218,7 +157,6 @@
     position: relative;
   }
   
-  /* Separador vertical en el centro de los horarios */
   .horarios::after {
     content: "";
     position: absolute;
@@ -252,7 +190,7 @@
     align-items: flex-start;
   }
   
-  .cuarta-fila-footer::after {
+  /* .cuarta-fila-footer::after {
     content: "";
     position: absolute;
     left: 50%;
@@ -261,7 +199,8 @@
     width: 93%;
     height: 1px;
     background-color: rgba(255, 255, 255, 0.2);
-  }
+  } */
+
 
   /* Quinta fila - Logo */
   .quinta-fila-footer {
