--- a/mi-aplicacion/src/components/Header/Header.css
+++ b/mi-aplicacion/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 2.5rem 3rem;
     background-color: var(--light-color);
     position: relative;
     z-index: 1200;
@@ -18,7 +18,7 @@
   }
   
   .logo img {
-    height: 50px;
+    height: 55px;
     width: auto;
   }
   
@@ -42,6 +42,8 @@
   .language-selector span {
     font-size: 0.9rem;
     transition: font-weight 0.3s;
+    color: var(--dark-color);
+
   }
   
   .language-selector .active {
