--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -1,7 +1,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: 'Verdana', sans-serif;
+  font-family: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
   /* background-color: var(--light-color); */
 }
 
