--- a/mi-aplicacion/src/pages/LandingPage/Landing.css
+++ b/mi-aplicacion/src/pages/LandingPage/Landing.css
@@ -17,8 +17,12 @@
     font-weight: 100;
     font-size: 3.5rem;
     text-align: center;
-
 }
+
+.landing-container h1 em {
+    /* font-style: italic; */
+    font-family: inherit;
+  }
 
 .landing-container h3 {
     font-weight: 100;
