--- a/mi-aplicacion/src/components/Header/Header.css
+++ b/mi-aplicacion/src/components/Header/Header.css
@@ -197,7 +197,11 @@
        font-size: 1.2rem;
        font-weight: 300;
        transition: color 0.3s;
+       transition: background-color 0.3s;
        display: block;
+       padding-top: 0.5rem;
+       padding-bottom: 0.5rem;
+       padding: 0.5rem;
    }
 
    .nav-link-container {
@@ -221,7 +225,9 @@
    }
 
    .nav-menu a:hover {
+       /* background-color: var(--taupe-color); */
        color: var(--taupe-color);
+       /* text-decoration: underline; */
    }
 
    .menu-overlay {
