--- a/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
@@ -4,7 +4,7 @@
     padding-top: 10rem;
     display: flex;
     flex-direction: column;
-
+    /* padding-bottom: 8rem; */
 }
 
 .inmolocation-inner {
@@ -14,6 +14,9 @@
     flex-direction: row;
     gap: 2rem;
     border-top: 2px solid var(--dark-color);
+    padding-bottom: 5rem;
+    /* border-bottom: 2px solid var(--dark-color); */
+
 }
 
 
@@ -30,6 +33,7 @@
     font-weight: 100;
     color: var(--dark-color);
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-transform: uppercase;
 }
 
 .inmolocation-left h3 {
@@ -54,8 +58,18 @@
     max-width: 500px; 
 }
 
-/* .carousel-location {
-    width: 100%;
-    height: auto;
-} */
+.carousel-location {
+    /* width: 100%;
+    height: auto; */
+    padding: 0rem 3rem;
+    
+}
+
+.carousel-location h3 {
+    font-size: 2rem;
+    font-weight: 100;
+    color: var(--dark-color);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-bottom: 1.4rem;
+}
 
