cortina y detalles Landing Page

--- a/mi-aplicacion/src/components/Header/Header.css
+++ b/mi-aplicacion/src/components/Header/Header.css
@@ -226,7 +226,7 @@
 
    .nav-menu a:hover {
        /* background-color: var(--taupe-color); */
-       color: var(--taupe-color);
+       color: var(--corporative-color);
        /* text-decoration: underline; */
    }
 
