--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -6,7 +6,7 @@
     /* padding: 0 40px;  */
     overflow: hidden; 
     background-color: var(--light-color);
-    border-top: 2px solid var(--dark-color);
+    /* border-top: 2px solid var(--dark-color); */
 
 }
 
@@ -18,7 +18,13 @@
     overflow-x: hidden; 
     scrollbar-width: none; /* Ocultar scrollbar en Firefox */
     -ms-overflow-style: none; /* Ocultar scrollbar en IE y Edge */
-    padding: 60px 0;
+    margin: 60px 0;
+    /* border-top: 2px solid var(--dark-color); */
+    margin-left: 3rem;
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
 }
 
 .carousel-wrapper::-webkit-scrollbar {
@@ -28,7 +34,7 @@
 .carousel-content {
     display: flex;
     gap: 50px;
-    padding-left: 3rem;
+    /* padding-left: 3rem; */
 
  
 }
