--- a/mi-aplicacion/src/Root.css
+++ b/mi-aplicacion/src/Root.css
@@ -1,3 +1,62 @@
-/* .outlet-container {
-    padding: 1rem 3rem;
+
+ .outlet-container {
+    animation: fadeInDesktop 0.5s ease-in forwards;
+}
+
+@keyframes fadeInDesktop {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+  }
+
+  /* .main-app {
+    width: 100%;
+    min-height: 100vh;
+}
+
+.waiting {
+    opacity: 0;
+}
+
+.fully-visible {
+    opacity: 1;
+    animation: fadeInContent 0.3s ease-in forwards;
+}
+
+.white-transition {
+    position: fixed;
+    top: -100%; 
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--light-color);
+    z-index: 9998; 
+    animation: slide-down-fade 0.1s ease-in-out forwards;
+}
+
+@keyframes slide-down-fade {
+    0% {
+        top: -100%;
+        opacity: 1;
+    }
+    50% {
+        top: 0;
+        opacity: 1;
+    }
+    100% {
+        top: 0;
+        opacity: 0;
+    }
+}
+
+@keyframes fadeInContent {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 } */
