--- a/mi-aplicacion/src/components/Footer/Footer.css
+++ b/mi-aplicacion/src/components/Footer/Footer.css
@@ -1,224 +1,136 @@
+.footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--corporative-color);
+}
+
 .footer-content {
-    background-color: var(--corporative-color);
-    color: var(--light-color);
-    padding: 2.5rem 2.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  
-  /* Primera fila - Menú de navegación */
-  .primera-fila-footer {
-    margin-bottom: 2.5rem;
-    width: 100%;
-  }
-  
-  .nav-menu-footer ul {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    gap: 1rem;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .nav-menu-footer a {
-    color: var(--light-color);
-    text-decoration: none;
-    font-size: 1.2rem;
-    transition: opacity 0.3s;
-    /* font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 300; */
-  }
-  
-  .nav-menu-footer a:hover {
-    color: var(--nude-color)
-  }
-  
-  /* Separador horizontal */
-  .primera-fila-footer::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-    margin: 2rem 0 0;
-  }
-  
+  background-color: var(--nude-color);
+  display: flex;
+  justify-content: space-between;
+  padding: 2.5rem 3rem;
+  color: var(--dark-color);
+}
+/* .footer-content {
+  display: flex;
+  justify-content: space-between;
+  background-color: #e9e9e7;
+  padding: 50px;
+  color: #333;
+} */
 
-/* Segunda fila - Teléfonos y dirección */
-.segunda-fila-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 0rem 0;
-    width: 100%;
-    position: relative;
-    margin-bottom: 3.5rem;
-  }
-  
-  .segunda-fila-footer::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    height: 80%;
-    width: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-  }
-  
-  .columna-izquierda, .columna-derecha {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    padding: 0 2rem;
-    width: 40%; 
-    max-width: 300px; 
-  }
-  
-  .columna-izquierda {
-    text-align: right;
-    justify-content: center;
-    align-items: flex-end;
-  }
-  
-  .columna-derecha {
-    text-align: left;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  
-  .columna-izquierda p, .columna-derecha p {
-    margin: 0;
-    font-size: 0.8rem;
-  }
+.footer-left {
+  flex: 1;
+  /* padding-right: 20px; */
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* Espacio entre elementos */
+  justify-content: flex-start;
+  font-weight: 100;
+}
 
-.segunda-fila-footer::before {
-    content: "";
-    margin-bottom: -3rem;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-  }
+.footer-left h3 {
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
+  margin-top: 1rem;
+
+}
+
+.footer-left p {
+  margin: 0.5rem 0;
+  color: var(--taupe-color);
+  font-weight: 100;
+  font-size: 0.9rem;
+}
 
 
-  
-  /* Tercera fila - Email */
-  .tercera-fila-footer {
-    margin: 2rem 0;
-    width: 100%;
-  }
-  
-  .tercera-fila-footer p {
-    margin: 0;
-    font-size: 0.8rem;
-  }
-  
-  .tercera-fila-footer::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-    margin: 2rem 0 0;
-  }
-  
 
 
-  /* Cuarta fila - Horarios */
-.cuarta-fila-footer {
-    margin: 2rem 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .cuarta-fila-footer h5 {
-    margin: 0 0 1.5rem;
-    font-size: 0.8rem;
-    font-weight: normal;
-    text-align: center;
-  }
-  
-  .horarios {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    position: relative;
-  }
-  
-  .horarios::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    height: 80%;
-    width: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-  }
-  
-  .horarios .columna-izquierda, 
-  .horarios .columna-derecha {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    padding: 0 2rem;
-    width: 40%;
-    max-width: 300px;
-  }
-  
-  .horarios .columna-izquierda {
-    text-align: right;
-    justify-content: center;
-    align-items: flex-end;
-  }
-  
-  .horarios .columna-derecha {
-    text-align: left;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  
-  /* .cuarta-fila-footer::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    width: 93%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-  } */
 
 
-  /* Quinta fila - Logo */
-  .quinta-fila-footer {
-    margin-top: 3rem;
-  }
-  
-  .quinta-fila-footer img {
-    height: 60px;
-    width: auto;
-  }
 
-  /* .quinta-fila-footer::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-  } */
+
+.footer-center {
+  flex: 2;
+  text-align: center;
+  padding: 0 3rem;
+}
+
+.footer-center h2 {
+  font-size: 2.2rem;
+  margin-bottom: 2rem;
+  font-weight: 300;
+}
+
+.footer-center p {
+  margin-bottom: 3rem;
+  font-size: 1rem;
+  font-weight: 100;
+
+}
+
+.register-button {
+  background-color: var(--nude-color);
+  color: var(--dark-color);
+  border: 1px solid var(--dark-color);
+  /* border-radius: 30px; */
+  padding: 1rem 2rem;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.register-button:hover {
+  background-color: var(--dark-color);
+  color: var(--nude-color);
+}
+
+
+
+
+
+
+
+
+.footer-right {
+  flex: 1;
+  padding-left: 20px;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  justify-content: flex-start;
+
+}
+
+.footer-right h3 {
+  font-size: 0.8rem;
+  margin-bottom: 20px;
+  font-weight: 300;
+  margin-top: 1rem;
+  text-transform: uppercase;
+}
+
+.footer-right p {
+  margin: 5px 0;
+  font-weight: 100;
+  font-size: 0.9rem;
+  color: var(--taupe-color);
+}
+
+
+
+
+
+
+.whatsapp-icon {
+  text-align: center;
+  padding: 2.5rem 3rem;
+}
+
+.whatsapp-icon img {
+  width: 60px;
+  height: auto;
+}
