--- a/mi-aplicacion/src/components/Footer/Footer.css
+++ b/mi-aplicacion/src/components/Footer/Footer.css
@@ -11,6 +11,7 @@
   padding: 2.5rem 3rem;
   color: var(--dark-color);
 }
+
 /* .footer-content {
   display: flex;
   justify-content: space-between;
@@ -25,7 +26,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 1rem; /* Espacio entre elementos */
+  gap: 1rem;
+  /* Espacio entre elementos */
   justify-content: flex-start;
   font-weight: 100;
 }
@@ -56,6 +58,9 @@
   flex: 2;
   text-align: center;
   padding: 0 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-center h2 {
@@ -65,28 +70,11 @@
 }
 
 .footer-center p {
-  margin-bottom: 3rem;
+  margin-bottom: 0.8rem;
   font-size: 1rem;
   font-weight: 100;
 
 }
-
-.register-button {
-  background-color: var(--nude-color);
-  color: var(--dark-color);
-  border: 1px solid var(--dark-color);
-  /* border-radius: 30px; */
-  padding: 1rem 2rem;
-  font-size: 1.1rem;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.register-button:hover {
-  background-color: var(--dark-color);
-  color: var(--nude-color);
-}
-
 
 
 
