--- a/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
@@ -39,6 +39,7 @@
     color: var(--dark-color);
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-transform: uppercase;
+    /* margin-top: 0; */
 }
 
 .inmolocation-left h3 {
@@ -61,14 +62,14 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    max-width: 580px; 
+    max-width: 580px;
 }
 
 .carousel-location {
     /* width: 100%;
     height: auto; */
     padding: 0rem 3rem;
-    
+
 }
 
 .carousel-location h3 {
@@ -80,4 +81,3 @@
     padding-bottom: 1.5rem;
     border-bottom: 2px solid var(--dark-color);
 }
-
