--- a/mi-aplicacion/src/components/Button/Button.css
+++ b/mi-aplicacion/src/components/Button/Button.css
@@ -19,7 +19,7 @@
     cursor: pointer;
     background-color: var(--dark-color);
     color: var(--light-color);
-    border: 1px solid var(--light-color);
+    border: 1px solid transparent;
 }
 
 /* .button-separator {
