--- a/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
+++ b/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    height: 100%; 
+    height: 100%;
 }
 
 .property-card__image-container {
@@ -65,7 +65,7 @@
 .property-card__info {
     padding: 1rem;
     cursor: pointer;
-    flex: 1; 
+    flex: 1;
     display: flex;
     flex-direction: column;
 }
@@ -74,6 +74,7 @@
     color: var(--corporative-color);
     font-size: 0.9rem;
     font-weight: 100;
+    letter-spacing: 0.8px;
     margin: 0 0 1.5rem 0;
     text-transform: uppercase;
 }
@@ -81,7 +82,7 @@
 .property-card__title {
     font-size: 1.5rem;
     font-weight: 400;
-    letter-spacing: 1px;
+    /* letter-spacing: 1px; */
     /* font-style: italic; */
     color: var(--dark-color);
     margin: 0 0 2rem 0;
@@ -99,7 +100,7 @@
     font-size: 0.8rem;
     font-weight: 100;
     text-transform: uppercase;
-    margin-top: auto; 
+    margin-top: auto;
     margin-bottom: 0;
 }
 
@@ -113,19 +114,19 @@
     .property-card__image-container {
         height: 200px;
     }
-    
+
     .property-card__info {
         padding: 16px;
     }
-    
+
     .property-card__price {
         font-size: 20px;
     }
-    
+
     .property-card__location {
         font-size: 14px;
     }
-    
+
     .property-card__features {
         font-size: 13px;
     }
