--- a/mi-aplicacion/src/components/Button/Button.css
+++ b/mi-aplicacion/src/components/Button/Button.css
@@ -5,7 +5,7 @@
     background-color: var(--nude-color);
     color: var(--dark-color);
     border: 1px solid var(--dark-color);
-    border-radius: 10px;
+    /* border-radius: 10px; */
     font: inherit; 
     font-size: 0.75rem;
     text-transform: uppercase;
