--- a/mi-aplicacion/src/components/Button/Button.css
+++ b/mi-aplicacion/src/components/Button/Button.css
@@ -1,11 +1,10 @@
-.custom-button {
+/* .custom-button {
     margin-top: 3rem;
     padding: 1rem 2rem;
     width: max-content; 
     background-color: var(--nude-color);
     color: var(--dark-color);
     border: 1px solid var(--dark-color);
-    /* border-radius: 10px; */
     font: inherit; 
     font-size: 0.75rem;
     text-transform: uppercase;
@@ -13,13 +12,49 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
+} */
+
+.custom-button {
+    position: relative;
+    margin-top: 3rem;
+    padding: 1rem 2rem;
+    width: max-content; 
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    border: 1px solid var(--light-color);
+    font: inherit; 
+    font-size: 0.7rem;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+/* Crear el segundo borde interior */
+.custom-button::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    right: 3px;
+    bottom: 3px;
+    border: 1px solid var(--light-color);
+    pointer-events: none; /* Para que no interfiera con clicks */
+}
+
+/* Estilo para el contenido del botón */
+.custom-button span {
+    position: relative; /* Para mantener el texto por encima del borde */
+    z-index: 1;
 }
 
 .custom-button:hover {
     cursor: pointer;
-    background-color: var(--dark-color);
+    background-color: var(--corporative-color);
     color: var(--light-color);
-    border: 1px solid transparent;
+    border: 1px solid var(--light-color);
 }
 
 /* .button-separator {
@@ -33,6 +68,7 @@
     height: 1.2rem; /* Altura de la línea vertical */
     background-color: currentColor; /* Usa el color del texto actual */
     vertical-align: middle;
+    
 }
 
 .button-icon {
