--- a/mi-aplicacion/src/components/Footer/Footer.css
+++ b/mi-aplicacion/src/components/Footer/Footer.css
@@ -5,20 +5,13 @@
 }
 
 .footer-content {
-  background-color: var(--nude-color);
+  background-color: var(--corporative-color);
   display: flex;
   justify-content: space-between;
   padding: 2.5rem 3rem;
-  color: var(--dark-color);
+  color: var(--light-color);
 }
 
-/* .footer-content {
-  display: flex;
-  justify-content: space-between;
-  background-color: #e9e9e7;
-  padding: 50px;
-  color: #333;
-} */
 
 .footer-left {
   flex: 1;
@@ -42,7 +35,7 @@
 
 .footer-left p {
   margin: 0.5rem 0;
-  color: var(--taupe-color);
+  color: var(--light-color);
   font-weight: 100;
   font-size: 0.9rem;
 }
@@ -105,7 +98,7 @@
   margin: 5px 0;
   font-weight: 100;
   font-size: 0.9rem;
-  color: var(--taupe-color);
+  color: var(--light-color);
 }
 
 
