--- a/mi-aplicacion/src/components/Footer/Footer.css
+++ b/mi-aplicacion/src/components/Footer/Footer.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   background-color: var(--corporative-color);
+  position: relative;
+  z-index: 10;
 }
 
 .footer-content {
