--- a/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
@@ -4,6 +4,8 @@
     padding-top: 10rem;
     display: flex;
     flex-direction: column;
+    background-color: var(--light-color);
+
 }
 
 .propertiesland-inner {
