--- a/mi-aplicacion/src/components/Button/Button.css
+++ b/mi-aplicacion/src/components/Button/Button.css
@@ -19,9 +19,9 @@
     margin-top: 3rem;
     padding: 1rem 2rem;
     width: max-content; 
-    background-color: var(--dark-color);
-    color: var(--light-color);
-    border: 1px solid var(--light-color);
+    background-color: var(--light-color);
+    color: var(--dark-color);
+    border: 1px solid var(--dark-color);
     font: inherit; 
     font-size: 0.7rem;
     /* font-family: Georgia, 'Times New Roman', Times, serif; */
@@ -40,7 +40,7 @@
     left: 3px;
     right: 3px;
     bottom: 3px;
-    border: 1px solid var(--light-color);
+    border: 1px solid var(--dark-color);
     pointer-events: none; /* Para que no interfiera con clicks */
 }
 
@@ -55,6 +55,16 @@
     background-color: var(--corporative-color);
     color: var(--light-color);
     border: 1px solid var(--light-color);
+}
+.custom-button:hover::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    right: 3px;
+    bottom: 3px;
+    border: 1px solid var(--light-color);
+    pointer-events: none;
 }
 
 /* .button-separator {
